# bazel-multiple-maven-locks

./: BUILD.bazel  CoreLib.java  ExampleTest.java  MODULE.bazel  README.md  WORKSPACE  maven_core_lock.json  maven_testing_lock.json
