# Bzlmod Configuration

module(
    name = "maven",
    version = "0.1",
)

# Maven Core installation
maven_install(
    name = "maven_core",
    artifacts = [
        "com.google.guava:guava:30.1-jre",
    ],
    lock_file = "maven_core.lock",
)

# Maven Testing installation
maven_install(
    name = "maven_testing",
    artifacts = [
        "junit:junit:4.13.2",
    ],
    lock_file = "maven_testing.lock",
)